--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -1,6 +1,6 @@
 <br><br>
 <div class="jumbotron">
-<div class="container well">
+<div class="container well" style="color:black; text-align:left;">
 
   <strong>App Name:</strong>
   <%= @app.title %>  
